--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   
                     <a-entity position="16 7 0"
                 rotation="0 -90 0" > 
-                <a-image class="buttons" data-title="imagen" src="happy.png" width="10" height="3">
+                <a-image class="buttons" data-title="imagen" src="static/happy.png" width="10" height="3">
                 </a-entity>
 
                   <a-box class="buttons" clickhandler="txt:coin" src="static/block.jpg" position="-1.5 1 -3"></a-box>
