--- a/index.html
+++ b/index.html
@@ -119,6 +119,47 @@
 
 
 
+    <a href="https://amzn.to/3xOBkP8" target="_blank"
+    class="author"><b>Super Mario</b><br>Comprar juegos</a>
+
+<style>
+body{
+    background:black;
+    font-family: arial;
+    font-size: 20px;
+}
+
+.author {
+    background: #fff url('static/icon.png');
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat: repeat;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: -5px center;
+    padding: 11px 11px 11px 75px;
+    background-size: 70px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    border: 2px white solid;
+    border-radius: 7px;
+    color: black;
+    font-size: 15px;
+    text-decoration: none;
+    z-index: 3;
+}
+
+
+@media screen and (max-width: 480px) {
+
+
+.author {
+    left: 20px;
+}
+}
+</style>
+
 
   </body>
 </html>
