--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Mario 64 - Happy Birthday</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
-  <script src="https://rawgit.com/mayognaise/aframe-gif-component/master/dist/aframe-gif-component.min.js"></script>
+<head>
+<title>Mario 64 - Happy Birthday</title>
+<meta charset="utf-8">
+<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+<script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
+<script src="https://rawgit.com/mayognaise/aframe-gif-component/master/dist/aframe-gif-component.min.js"></script>
 
 
-  <link rel="prefetch" href="static/mario.png" />
-  <link rel="prefetch" href="static/castle.png" />
-  <link rel="prefetch" href="static/block.jpg" />
-  <link rel="prefetch" href="static/goomba2.png" />
-  <link rel="prefetch" href="static/mario.mp3" />
-   <link rel="prefetch" href="static/coin.mp3" />
+<link rel="prefetch" href="static/mario.png" />
+<link rel="prefetch" href="static/castle.png" />
+<link rel="prefetch" href="static/block.jpg" />
+<link rel="prefetch" href="static/goomba2.png" />
+<link rel="prefetch" href="static/mario.mp3" />
+<link rel="prefetch" href="static/coin.mp3" />
 
 
-    <meta property="og:image" content="https://vivirenremoto.github.io/mario_happybirthday/static/social.png">
-    <meta property="og:image:secure_url"
-        content="https://vivirenremoto.github.io/mario_happybirthday/static/social.png">
-    <meta property="og:image:alt" content="Mario 64 - Happy Birthday">
-    <meta property="og:image:type" content="image/png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Mario 64 - Happy Birthday">
-    <meta name="twitter:image" content="https://vivirenremoto.github.io/mario_happybirthday/static/social.png">
+<meta property="og:image" content="https://vivirenremoto.github.io/mario_happybirthday/static/social.jpg">
+<meta property="og:image:secure_url"
+    content="https://vivirenremoto.github.io/mario_happybirthday/static/social.jpg">
+<meta property="og:image:alt" content="Mario 64 - Happy Birthday">
+<meta property="og:image:type" content="image/png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Mario 64 - Happy Birthday">
+<meta name="twitter:image" content="https://vivirenremoto.github.io/mario_happybirthday/static/social.jpg">
 
 
-  </head>
-  <body>
+</head>
+<body>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VX2M9NB3E4"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-VX2M9NB3E4');
+</script>
 
   <audio id="sound_mario">
         <source src="static/mario.mp3" type="audio/mp3">
