--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ gtag('config', 'G-VX2M9NB3E4');
 
 
     <a href="https://amzn.to/3xOBkP8" target="_blank"
-    class="author"><b>Super Mario</b><br>Comprar juegos</a>
+    class="author"><b>Super Mario</b><br>Juegos y figuras</a>
 
 <style>
 body{
