--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ gtag('config', 'G-VX2M9NB3E4');
               document.getElementById('sound_goomba').currentTime = 0;
               document.getElementById('sound_goomba').play();
             }else if( data.txt == 'castle' ){
-              document.location = 'https://vivirenremoto.github.io/mario64stairs/';
+              window.open('https://vivirenremoto.github.io/mario64stairs/');
             }
             
           });        
