--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ gtag('config', 'G-VX2M9NB3E4');
               document.getElementById('sound_goomba').currentTime = 0;
               document.getElementById('sound_goomba').play();
             }else if( data.txt == 'castle' ){
-              window.open('https://vivirenremoto.github.io/mario64stairs/');
+              if( confirm('¿Quieres entrar en el castillo?') ){
+                window.open('https://vivirenremoto.github.io/mario64stairs/');
+              }
             }
             
           });        
@@ -118,7 +120,7 @@ gtag('config', 'G-VX2M9NB3E4');
                 <a-image clickhandler="txt:mario" class="buttons" data-title="imagen" src="static/mario.png" width="3" height="3">
                 </a-entity>
       
-                <a-entity position="40 200 300"
+                <a-entity position="40 200 290"
                     rotation="0 10 0" > 
                     <a-image  clickhandler="txt:castle" class="buttons" data-title="imagen" src="static/castle.png" width="600" height="600">
                     </a-entity>
