--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
 <script src="https://rawgit.com/mayognaise/aframe-gif-component/master/dist/aframe-gif-component.min.js"></script>
 
+<link rel="shortcut icon" href="favicon.ico" />
+
 
 <link rel="prefetch" href="static/mario.png" />
 <link rel="prefetch" href="static/castle.png" />
