--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ gtag('config', 'G-VX2M9NB3E4');
             }else if( data.txt == 'coin' ){
               document.getElementById('sound_coin').currentTime = 0;
               document.getElementById('sound_coin').play();
+              if( confirm('¿Quieres visitar mi CV?') ){
+                window.open('https://vivirenremoto.github.io/mariocv/');
+              }
             }else if( data.txt == 'goomba' ){
               document.getElementById('sound_goomba').currentTime = 0;
               document.getElementById('sound_goomba').play();
