--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="prefetch" href="static/castle.png" />
 <link rel="prefetch" href="static/block.jpg" />
 <link rel="prefetch" href="static/goomba2.png" />
-<link rel="prefetch" href="static/mario2.mp3" />
+<link rel="prefetch" href="static/mario.mp3" />
 <link rel="prefetch" href="static/coin.mp3" />
 <link rel="prefetch" href="static/goomba.mp3" />
 
@@ -43,7 +43,7 @@ gtag('config', 'G-VX2M9NB3E4');
 </script>
 
   <audio id="sound_mario">
-        <source src="static/mario2.mp3" type="audio/mp3">
+        <source src="static/mario.mp3" type="audio/mp3">
     </audio>
     
     <audio id="sound_coin">
